objects/Trade_Instrument__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMRA Agreement</fullName>
                </value>
                <value>
                    <fullName>GMSLA Agreement</fullName>
                </value>
                <value>
                    <fullName>ISDA Agreement</fullName>
                </value>
                <value>
                    <fullName>Prime Services Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Instrument_ID__c</fullName>
        <externalId>true</externalId>
        <label>Trade Instrument ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trade Instrument</label>
    <nameField>
        <label>Trade Instrument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Instruments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>